--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -16,6 +16,8 @@
 		</p>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
 		<script type="text/javascript" src="nepsocket.js"></script>
+		<script type="text/javascript" src="utils.js"></script>
 		<script type="text/javascript" src="render.js"></script>
+		<script type="text/javascript" src="gui.js"></script>
 	</body>
 </html>
