--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -15,6 +15,7 @@
 		<button id='fireRequest'>Fire Request</button>
 		</p>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+		<script type="text/javascript" src="utils.js"></script>
 		<script type="text/javascript" src="nepsocket.js"></script>
 		<script type="text/javascript" src="render.js"></script>
 	</body>
