--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -22,15 +22,19 @@
 				barrelLength: 40,
 				barrelThickness: 3
 			};
+			
+			
 		</script>
 		<script type="text/javascript" src="utils.js"></script>
 		<script type="text/javascript" src="world.js"></script>
 		<script type="text/javascript" src="nepsocket.js"></script>		
 		<script type="text/javascript" src="socketimpl.js"></script>
 		<script type="text/javascript" src="render.js"></script>
-		<script type="text/javascript" src="gui.js"></script>
+		<script type="text/javascript" src="userinput.js"></script>
 		<script type="text/javascript">
-			renderer.init();
+		var c = $("#canvas")[0];
+			UI.init(c);
+			renderer.init(c);
 			renderer.render();
 		</script>
 	</body>
