--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -9,6 +9,7 @@
 		
 		<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
 		<script type="text/javascript">
+		        if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 			var config = {
 				socketUrl: 'http://tom.q42.local:85/gameupdates',
 				screenSize: {
