Fire events get sent

--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -28,12 +28,12 @@
 		<script type="text/javascript" src="nepsocket.js"></script>		
 		<script type="text/javascript" src="render.js"></script>
 		<script type="text/javascript" src="userinput.js"></script>
+		<script type="text/javascript" src="socketimpl.js"></script>
 		<script type="text/javascript">
-		  var c = $("#canvas")[0];
-			UI.init(c);
+			var c = $("#canvas")[0];
+			UI.init(c, socket);
 			renderer.init(c);
 			renderer.render();
-		</script>
-		<script type="text/javascript" src="socketimpl.js"></script>		
+		</script>		
 	</body>
 </html>
