--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -24,6 +24,7 @@
 			};
 		</script>
 		<script type="text/javascript" src="utils.js"></script>
+		<script type="text/javascript" src="bullets.js"></script>
 		<script type="text/javascript" src="world.js"></script>
 		<script type="text/javascript" src="nepsocket.js"></script>		
 		<script type="text/javascript" src="render.js"></script>
