Countdown naar volgende beurt werkt.

--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -21,7 +21,8 @@
 				tankHeight: 16,
 				healthIndicatorBottomMargin: 5,
 				barrelLength: 40,
-				barrelThickness: 3
+				barrelThickness: 3,
+				roundTime: 15000
 			};
 		</script>
 		<script type="text/javascript" src="utils.js"></script>
