--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -5,6 +5,10 @@
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
+	  <h1>Scorched Canvas</h1>
+	  <div>
+	    Christiaan, Kamil, Martijn, Remco, Tom  
+	  </div>
 		<canvas id="canvas"></canvas>
 		
 		<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
