damn touch events..

--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -5,6 +5,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body>
+		<div id="log">log</div>
 		<canvas id="canvas"></canvas>
 		
 		<script type="text/javascript" src="jquery-1.4.4.min.js"></script>
@@ -36,6 +37,7 @@
 			UI.init(c, socket);
 			renderer.init(c);
 			renderer.render();
+			$("#log").html("hoi");
 		</script>		
 	</body>
 </html>
