--- a/ScorchedClient/index.html
+++ b/ScorchedClient/index.html
@@ -18,10 +18,11 @@
 					height: 600
 				},
 				debug: false,
-				tankWidth: 32,
-				tankHeight: 16,
+				tankWidth: 40,
+				tankHeight: 8,
+				tankGapWidth: 4,
 				healthIndicatorBottomMargin: 5,
-				barrelLength: 40,
+				barrelLength: 30,
 				barrelThickness: 3,
 				roundTime: 10000
 			};
