--- a/ScorchedServer/ScorchedServer/play/index.html
+++ b/ScorchedServer/ScorchedServer/play/index.html
@@ -23,7 +23,7 @@
 		        if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 
 			var config = {
-				socketUrl: 'http://tom.q42.local:86/gameupdates',
+				socketUrl: '/gameupdates',
 				screenSize: {
 					width: 800,
 					height: 600
