aiming relative to tank i/o center of screen. display progress bar at gameInit. put vector in a separate file

--- a/ScorchedServer/ScorchedServer/play/index.html
+++ b/ScorchedServer/ScorchedServer/play/index.html
@@ -23,7 +23,7 @@
 		        if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 
 			var config = {
-				socketUrl: 'http://tom.q42.local:85/gameupdates',
+				socketUrl: 'http://themotherofallgames.com/gameupdates',
 				screenSize: {
 					width: 800,
 					height: 600
@@ -39,6 +39,7 @@
 			};
 		</script>
 		<script type="text/javascript" src="utils.js"></script>
+		<script type="text/javascript" src="vector.js"></script>
 		<script type="text/javascript" src="player.js"></script>
 		<script type="text/javascript" src="world.js"></script>
 		<script type="text/javascript" src="nepsocket.js"></script>		
