Hardcode live server.

--- a/ScorchedServer/ScorchedServer/play/index.html
+++ b/ScorchedServer/ScorchedServer/play/index.html
@@ -13,7 +13,7 @@
 		        if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 
 			var config = {
-				socketUrl: '/gameupdates',
+				socketUrl: 'http://themotherofallgames.com/gameupdates',
 				screenSize: {
 					width: 800,
 					height: 600
