shape of player fixed.

--- a/ScorchedServer/ScorchedServer/play/index.html
+++ b/ScorchedServer/ScorchedServer/play/index.html
@@ -17,7 +17,7 @@
       if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 
       var config = {
-        socketUrl: 'http://themotherofallgames.com/gameupdates',
+        socketUrl: '/gameupdates',
         screenSize: {
           width: 800,
           height: 600
