--- a/ScorchedServer/ScorchedServer/index.html
+++ b/ScorchedServer/ScorchedServer/index.html
@@ -1,54 +1,65 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The Mother of All Games</title>
-  <link rel="stylesheet" type="text/css" href="homepage.css"></link>
-  <link rel="stylesheet" type="text/css" href="http://q42.nl/w00tcamp/w00tcamp-footer.css"></link>
+<title>The Mother of All Games</title>
+<link rel="stylesheet" type="text/css" href="homepage.css">
+<link rel="stylesheet" type="text/css" href="http://q42.nl/w00tcamp/w00tcamp-footer.css">
 </head>
 <body>
-<div>
-  <h1>The Mother of All Games</h1>
-  <div class="screenshot">
-    <a href="play">
-      <img src="screenshot.png" alt="Screenshot of The Mother of All Games" />
-    </a>
-  </div>
-  <div class="description">
-    <p>
-      Multiplayer Scorched Earth Online Game!
-    </p>
-    <p>
-      This game was made in 2 days by
-      <a href="http://twitter.com/christiaanhees">Christiaan</a>,
-      <a href="http://twitter.com/kamilafsar">Kamil</a>,
-      <a href="http://twitter.com/medeamelana">Martijn</a>,
-      <a href="http://twitter.com/remcoder">Remco</a> and
-      <a href="http://twitter.com/tomlokhorst">Tom</a>
-      during <a href="http://q42.nl/w00tcamp">w00tcamp 2010</a>.
-    </p>
-    <p>
-      The game is based on classic games like Scorched Earth and Worms.
-      This version uses JavaScript and HTML 5 techniques to make it all work
-      in the browser.
-    </p>
-    <p>
-      You have 10 seconds per round to aim. At the end of the round the
-      players will shoot. Score points by shooting other players.
-      You can aim by clicking with the mouse.
-    </p>
-    <p>
-      <a href="play">Start the game</a> and have fun!
-    </p>
-  </div>
-  <div class="clear">&nbsp;</div>
+<div id=content>
+
+<h1>The Mother of All Games</h1>
+<div class="screenshot">
+<a href="play"><img src="media/2010-12-04-1700.png" alt="Screenshot of The Mother of All Games"></a>
+</div>
+
+<div class="description box">
+<p>
+<strong>Multiplayer Scorched Earth Online Game!</strong>
+</p>
+<p>
+The game is based on classic games like Scorched Earth and Worms.
+This version uses JavaScript and HTML 5 techniques to make it all work in the browser.
+</p>
+<p>
+You have 10 seconds per round to aim. At the end of each round, all players will fire simultaneously.
+Score points by shooting other players. You can aim by clicking with the mouse.
+</p>
+<p>
+<a href="play">Start the game</a> and have fun!
+</p>
+</div>
+
+<h2>Development history</h2>
+<div class="box">
+<p>
+This game was developed in 2 days by
+<a href="http://twitter.com/christiaanhees">Christiaan</a>,
+<a href="http://twitter.com/kamilafsar">Kamil</a>,
+<a href="http://twitter.com/medeamelana">Martijn</a>,
+<a href="http://twitter.com/remcoder">Remco</a> and
+<a href="http://twitter.com/tomlokhorst">Tom</a>
+during <a href="http://q42.nl/w00tcamp">w00tcamp 2010</a>.
+</p>
+<p>
+As work progresses:
+<p>
+<a href=media/2010-11-24_1630.jpg><img src=media/2010-11-24_1630.jpg class=history></a>
+<a href=media/2010-11-26_1233.jpg><img src=media/2010-11-26_1233.jpg class=history></a>
+<a href=media/2010-11-26_1440.jpg><img src=media/2010-11-26_1440.jpg class=history></a>
+<a href=media/2010-11-26_1647.jpg><img src=media/2010-11-26_1647.jpg class=history></a>
+<a href=media/2010-11-27_0320.jpg><img src=media/2010-11-27_0320.jpg class=history></a>
+<a href=media/2010-11-27_1700.png><img src=media/2010-11-27_1700.png class=history></a>
 </div>
 
 <div id="w00tcamp-footer">
-  <a href="http://q42.nl/w00tcamp"
-     title="This is another Q42 w00tcamp product, checkout more q42 idea's and fun products here">
-    <img class="q42-logo" src="http://q42.nl/img/q42_logo.gif" /> #w00tcamp
-  </a>
+  <a href="http://q42.nl/w00tcamp" title="This is another Q42 w00tcamp product, checkout more q42 idea's and fun products here"><img class="q42-logo" src="http://q42.nl/img/q42_logo.gif" /> #w00tcamp</a>
 </div>
+
+<script>
+if(navigator.platform == 'iPad' || navigator.platform == 'iPhone' || navigator.platform == 'iPod')
+  document.getElementById('w00tcamp-footer').style.position = 'static';
+</script>
 
 <script type="text/javascript">
   var _gaq = _gaq || [];
