--- a/src/ScorchedServer/play/index.html
+++ b/src/ScorchedServer/play/index.html
@@ -35,12 +35,12 @@
     <script type="text/javascript" src="coffee-script.js"></script>
     <script type="text/coffeescript" src="cs/vector.coffee"></script>
     <script type="text/coffeescript" src="cs/rectangle.coffee"></script>
-    <script type="text/javascript" src="player.js"></script>
+    <script type="text/coffeescript" src="cs/player.coffee"></script>
     <script type="text/javascript" src="world.js"></script>
-    <script type="text/javascript" src="nepsocket.js"></script>    
+    <script type="text/coffeescript" src="cs/fakesocket.coffee"></script>
     <script type="text/javascript" src="render.js"></script>
     <script type="text/javascript" src="userinput.js"></script>
-    <script type="text/javascript" src="socketimpl.js"></script>
+    <script type="text/coffeescript" src="cs/socketimpl.coffee"></script>
     <script type="text/javascript">
       $(document).ready(function ()
       {
