Added render.coffee. All JavaScript files are now ported to CoffeScript

--- a/src/ScorchedServer/play/index.html
+++ b/src/ScorchedServer/play/index.html
@@ -39,7 +39,7 @@
     <script type="text/coffeescript" src="cs/rectangle.coffee"></script>
     <script type="text/coffeescript" src="cs/player.coffee"></script>
     <script type="text/coffeescript" src="cs/world.coffee"></script>
-    <script type="text/javascript" src="render.js"></script>
+    <script type="text/coffeescript" src="cs/render.coffee"></script>
     <script type="text/coffeescript" src="cs/userinput.coffee"></script>
     <script type="text/coffeescript" src="cs/socketimpl.coffee"></script>
 
