--- a/src/ScorchedServer/play/index.html
+++ b/src/ScorchedServer/play/index.html
@@ -17,7 +17,8 @@
       if (typeof console == "undefined" || typeof console.log == "undefined") var console = { log: function () { } };
 
       var config = {
-        socketUrl: 'http://themotherofallgames.com/gameupdates',
+        //socketUrl: 'http://themotherofallgames.com/gameupdates',
+        socketUrl: '/gameupdates',
         screenSize: {
           width: 800,
           height: 600
@@ -34,25 +35,18 @@
     </script>
     <script type="text/javascript" src="coffee-script.js"></script>
 
-    <script type="text/coffeescript" src="cs/fakesocket.coffee"></script>
-    <script type="text/coffeescript" src="cs/vector.coffee"></script>
-    <script type="text/coffeescript" src="cs/rectangle.coffee"></script>
-    <script type="text/coffeescript" src="cs/player.coffee"></script>
-    <script type="text/coffeescript" src="cs/world.coffee"></script>
-    <script type="text/coffeescript" src="cs/render.coffee"></script>
-    <script type="text/coffeescript" src="cs/userinput.coffee"></script>
-    <script type="text/coffeescript" src="cs/socketimpl.coffee"></script>
+    <script type="text/javascript" src="nepsocket.js"></script>
+    <script type="text/javascript" src="vector.js"></script>
+    <script type="text/javascript" src="rectangle.js"></script>
+    <script type="text/javascript" src="player.js"></script>
+    <script type="text/javascript" src="world.js"></script>
+    <script type="text/javascript" src="render.js"></script>
+    <script type="text/javascript" src="userinput.js"></script>
+    <script type="text/javascript" src="socketimpl.js"></script>
 
     <script type="text/javascript">
       function init ()
       {
-        // Wait for CoffeScript JIT compiler to complete
-        if (!window.Vector || !window.Rectangle || !window.Player || !window.world || !window.FakeSocket || !window.UI || !window.socket || !window.renderer)
-        {
-          setTimeout(init, 100);
-          return;
-        }
-
         var c = $("#canvas")[0];
         UI.init(c, socket);
         renderer.init(c);
